--- a/faux-typey-type-data/lesson-source-data/stories/gerard-nolst-trenite/the-chaos/lesson-overview.html
+++ b/faux-typey-type-data/lesson-source-data/stories/gerard-nolst-trenite/the-chaos/lesson-overview.html
@@ -1,7 +1,7 @@
 <div class="lesson-overview type-face--sans-serif" id="the-chaos-overview">
   <div class="bg-white dark:bg-coolgrey-1000 pt24 pb24">
     <div class="mx-auto mw-1024 p3">
-      <p class="lede de-emphasized mw-696 mb0">“The Chaos” is by Dutch writer, traveller, and teacher Gerard Nolst Trenité. It is a poem demonstrating the irregularity of English spelling and pronunciation</p>
+      <p class="lede de-emphasized mw-696 mb0">“The Chaos” is by Dutch writer, traveller, and teacher Gerard Nolst Trenité.</p>
     </div>
   </div>
   <div class="mx-auto mw-1024 p3">
@@ -10,7 +10,10 @@
         <div class="mw-584">
           <ol class="list--feature">
             <li>
-              <p><a href="https://en.wikipedia.org/wiki/The_Chaos">Wikipedia: The Chaos</a></p>
+              <p>“The Chaos” is a poem demonstrating the irregularity of English spelling and pronunciation. Learn more at <a href="https://en.wikipedia.org/wiki/The_Chaos" target="_blank" rel="noopener noreferrer">Wikipedia: The Chaos</a>.</p>
+            </li>
+            <li>
+              <p>This lesson also shows the compromises necessary in steno theory to cope with the quirks of English.</p>
             </li>
           </ol>
         </div>
