Update top-100-words overview with 5 new entries

--- a/faux-typey-type-data/lesson-source-data/drills/top-100-words/lesson-overview.html
+++ b/faux-typey-type-data/lesson-source-data/drills/top-100-words/lesson-overview.html
@@ -19,6 +19,12 @@
             <li><p>“was” is <code class="steno-stroke steno-stroke--subtle">WAS</code> or <code class="steno-stroke steno-stroke--subtle">-FS</code> on the right side so you can combine it with other briefs on the left side for phrasing briefs, such as “she was” using&nbsp;<code class="steno-stroke steno-stroke--subtle">SHEFS</code>.</p></li>
             <li><p>“his” is <code class="steno-stroke steno-stroke--subtle">HEUS</code>.</p></li>
             <li><p>“he” is <code class="steno-stroke steno-stroke--subtle">HE</code>.</p></li>
+            <li><p>“it” is <code class="steno-stroke steno-stroke--subtle">T</code> on the left side so you can combine it with other keys for phrasing briefs, such as “it was” using&nbsp;<code class="steno-stroke steno-stroke--subtle">TWAS</code>.</p></li>
+            <li><p>“with” is <code class="steno-stroke steno-stroke--subtle">W</code> on the left side so you can combine it with other keys for phrasing briefs, such as “with the” using&nbsp;<code class="steno-stroke steno-stroke--subtle">W-T</code>.</p></li>
+            <li><p>“is” is <code class="steno-stroke steno-stroke--subtle">S</code> on the left side so you can combine it with other keys for phrasing briefs, such as “is this” using&nbsp;<code class="steno-stroke steno-stroke--subtle">STH</code>.</p></li>
+            <li><p>“for” is <code class="steno-stroke steno-stroke--subtle">TPOR</code>. You can use <code class="steno-stroke steno-stroke--subtle">TP-R</code> as well to combine it with other keys for phrasing briefs, such as “for the” using&nbsp;<code class="steno-stroke steno-stroke--subtle">TP-RT</code>.</p></li>
+            <li><p>“as” is <code class="steno-stroke steno-stroke--subtle">AS</code> or <code class="steno-stroke steno-stroke--subtle">AZ</code>.
+            <!-- <li><p>“also” is <code class="steno-stroke steno-stroke--subtle">HR-S</code>. You can use <code class="steno-stroke steno-stroke--subtle">S-LS</code> as well to combine it with other keys for phrasing briefs, such as “are also” using&nbsp;<code class="steno-stroke steno-stroke--subtle">R-LS</code>.</p></li> -->
           </ol>
         </div>
         <div class="items-center">
